Bug 156721 - bad behaviour on low disk space left.
Summary: bad behaviour on low disk space left.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 1.6.1
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-01-26 16:13 UTC by Raúl
Modified: 2010-08-20 15:09 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raúl 2008-01-26 16:13:00 UTC
Version:           1.6.3 (using 3.5.8, Debian Package 4:3.5.8.dfsg.1-6 (lenny/sid))
Compiler:          Target: x86_64-linux-gnu
OS:                Linux (x86_64) release 2.6.24-rtoi-rc5

Imagine you are low of spare disk space on the temporary dir. In this situation, when krita takes all remaining disk space it hungs on state D.

If you kill krita in this situation, it won't free the taken storage, hence the system will be in unstable state.

As possible solutions krita could do a cleanup on kill signal or alternatively checkout left disk space before doing such operations.

This bug report is transponded from debian BTS: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=451603

Thanks.
Comment 1 Elián Hanisch 2008-10-26 17:43:05 UTC
I can confirm in krita2beta2, if krita runs out of free space krita freezes and I have to kill it and the temp files aren't deleted
Comment 2 Halla Rempt 2009-10-29 11:00:50 UTC
We don't have swapping yet in the currently active tile engine, but when it is implemented, it will have to take this issue into account. Assign to Dmitry.
Comment 3 Dmitry Kazakov 2010-08-20 15:09:12 UTC
SVN commit 1165939 by dkazakov:

Remove old swap files for the case Krita crashed recently

BUG:156721


 M  +25 -1     kis_memory_window.cpp  
 M  +1 -0      kis_memory_window.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1165939