Remove old swap files for the case Krita crashed recently

BUG:156721

svn path=/trunk/koffice/; revision=1165939