krita/image/tiles3/swap/kis_memory_window.cpp
@@ -19,13 +19,25 @@
 #include "kis_debug.h"
 #include "kis_memory_window.h"
 
+#include <QDir>
+
+#define SWP_PREFIX "KRITA_SWAP_FILE."
+#define SWP_PATH QDir::tempPath()
+
+#define SWAP_FILE_PATH() (SWP_PATH)
+#define SWAP_FILE_PATTERN() (SWP_PREFIX "*")
+#define SWAP_FILE_TEMPLATE() (SWP_PATH + QDir::separator() + SWP_PREFIX + "XXXXXX")
+
 
 KisMemoryWindow::KisMemoryWindow(quint64 writeWindowSize)
-    : m_readWindowChunk(0,0), m_writeWindowChunk(0,0)
+    : m_file(SWAP_FILE_TEMPLATE()),
+      m_readWindowChunk(0,0),
+      m_writeWindowChunk(0,0)
 {
     m_writeWindowSize = writeWindowSize;
     m_readWindowSize = writeWindowSize / 4;
 
+    cleanOldFiles();
     m_file.open();
 
     m_readWindow = 0;
@@ -34,6 +46,18 @@ KisMemoryWindow::KisMemoryWindow(quint64 writeWindowSize)
 
 KisMemoryWindow::~KisMemoryWindow()
 {
+}
+
+void KisMemoryWindow::cleanOldFiles()
+{
+    QDir directory(SWAP_FILE_PATH());
+    directory.setNameFilters(QStringList(QString(SWAP_FILE_PATTERN())));
+
+    QStringList filesList = directory.entryList();
+
+    foreach(QString path, filesList) {
+        directory.remove(path);
+    }
 }
 
 quint8* KisMemoryWindow::getReadChunkPtr(const KisChunkData &readChunk)
