krita/image/tiles3/swap/kis_memory_window.h
@@ -45,6 +45,7 @@ public:
     quint8* getWriteChunkPtr(const KisChunkData &writeChunk);
 
 private:
+    void cleanOldFiles();
     void adjustWindow(const KisChunkData &requestedChunk, quint8 **window,
                       KisChunkData *windowChunk, quint64 windowSize);
 
